# ComfyUI-Step1X-Edit

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
src/examples/: prompt_cn.json  prompt_en.json
src/modules/: conditioner.py  model_edit.py
src/scripts/: get_flash_attn.py
